The change made to the AddBlur function involves reorganizing the copying order of values in the b->p1 and b->p2 arrays. Previously, the values were shifted to the left, and the last value was lost when b->Number reached MAX_BLUR_TAILS. Now, the values are shifted to the right, allowing the insertion of new values at the beginning of the arrays. Additionally, a check has been added to ensure that b->Number does not exceed the maximum allowed size.

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,7 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/ConnectServer/ConnectServer/ConnectServer.vcxproj
+/ConnectServer/Release/ConnectServer_EX603/ServerList.xml
+/ConnectServer/Release/ConnectServer_EX603/ServerList.xml
+/ConnectServer/ConnectServer/ConnectServer.vcxproj
