--- a/ConnectServer/ConnectServer/ConnectServer.vcxproj.filters
+++ b/ConnectServer/ConnectServer/ConnectServer.vcxproj.filters
@@ -144,7 +144,16 @@
     <Image Include="..\..\Util\icone.ico">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="MU.gif">
+    <Image Include="Rebirth.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Rebirth_Small.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ConnectServer.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="IMAGE.bmp">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
