--- a/GameServer/GameServer/GameServer.vcxproj.filters
+++ b/GameServer/GameServer/GameServer.vcxproj.filters
@@ -1536,5 +1536,14 @@
     <Image Include="Rebirth_Small.ico">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="GameServer.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="GameServerCS.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="IMAGE.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
