--- a/JoinServer/JoinServer/JoinServer.vcxproj.filters
+++ b/JoinServer/JoinServer/JoinServer.vcxproj.filters
@@ -153,5 +153,11 @@
     <Image Include="Rebirth_Small.ico">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="IMAGE.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="JoinServer.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
